force-app/main/default/objects/smagicinteract__Confirmation_Config__c/smagicinteract__Confirmation_Config__c.object-meta.xml
<CustomObject>
    <description>This Object stores the keyword list for the content type(Default,Compliance center) also store consent mode(Opt-In, Opt-Out) and consent source(Manual, Automated)</description>
    <label>Confirmation Config</label>
    <nameField>
        <label>Config Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Confirmation Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>