force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__Channel__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Channel Information for Confirmation Config</description>
    <label>Channel</label>
    <referenceTo>smagicinteract__Channel_Master__c</referenceTo>
    <relationshipLabel>Confirmation Configs</relationshipLabel>
    <relationshipName>Confirmation_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>