force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Confirmation_Message__c</fullName>
    <description>Message to be displayed with the related keyword.</description>
    <label>Confirmation Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>