force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__ConfirmationSenderID__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ConfirmationSenderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmation Sender ID</label>
    <referenceTo>smagicinteract__SMS_SenderId__c</referenceTo>
    <relationshipLabel>Confirmation Configs</relationshipLabel>
    <relationshipName>Confirmation_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>