force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__ConsentSource__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ConsentSource__c</fullName>
    <description>Source by which consent is recorded. For e.g. Auto, Manual, Pardot</description>
    <label>ConsentSource</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>