force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__ConsentType__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ConsentType__c</fullName>
    <description>Type of consent to be recorded for the keyword. (For e.g. Opt-In, Opt-Out).</description>
    <label>ConsentType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opt-In</fullName>
                <default>true</default>
                <label>Opt-In</label>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
            <value>
                <fullName>Help</fullName>
            </value>
            <value>
                <fullName>Double Opt-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>