force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Content_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up to the content type for which consent will be recorded.</description>
    <label>Content Type</label>
    <referenceTo>smagicinteract__ContentType__c</referenceTo>
    <relationshipLabel>Confirmation Configs</relationshipLabel>
    <relationshipName>Confirmation_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>