force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__Enabled__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>keyword is enabled or disabled. used only for Org-wide keywords.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>