force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__Keyword__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Keyword__c</fullName>
    <description>List of keyword for Opt-IN and Opt-Out</description>
    <label>Keyword</label>
    <type>TextArea</type>
</CustomField>