force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Message__c</fullName>
    <description>Message to be displayed with the related keyword</description>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>