force-app/main/default/objects/smagicinteract__Confirmation_Config__c/fields/smagicinteract__SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template attached to Confirmation Config for Multi Channel</description>
    <label>Converse Template</label>
    <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
    <relationshipLabel>Confirmation Configs</relationshipLabel>
    <relationshipName>Confirmation_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>